# Sudo-ID

./: .brainignore  .gitignore  CHANGELOG.md  CHAT_VISIBILITY_TEST.md  COMMANDS.md  DISTRIBUTION.md  HANDOFF.md  README.md  WATCHER_SMOKE_TEST.md  ask_brain.py  brain.toml  brain_cli.py  brain_common.py  brain_doctor.py  brain_init.py  brain_settings.py  brain_tui.py  brain_version.py  brain_workflows.py  memorize.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sync_brain.py  watch_brain.py
.github/workflows/: ci.yml
scripts/: set_openai_key.sh  setup.sh  start.sh  with_python.sh
sudo_id_brain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ask_brain.py  test_brain_doctor.py  test_sync_brain.py
